--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 
 <body>
     <h1>Rodrigo Becker Ferreira</h1>
-    <img src="assets/photo.png" height="100" alt="Rodrigo's Photo" <hr>
+    <img src="assets/photo.png" height="100" alt="Rodrigo's Photo"
     <p></p>
     <a href="https://github.com/tagbyrodrigo">Github</a>
     <hr>
     <h2>Education</h2>
     <ul>
-        <li> Unisinos - System analysis and development
+        <li> <h3>Unisinos</h3>
+            <ph>System analysis and development</ph> 
     </ul>
     </li>
     <hr>
